[gd_scene load_steps=7 format=2]

[ext_resource path="res://Mothership.gd" type="Script" id=1]
[ext_resource path="res://Art/Mothership.png" type="Texture" id=2]
[ext_resource path="res://Sounds/ExplodingPlayerGun.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Mothership2.wav" type="AudioStream" id=4]
[ext_resource path="res://Art/exlodingInvader.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Mothership" type="RigidBody2D" index="0"]

position = Vector2( -88.8986, 79.6107 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 5
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="MothershipSprite" type="Sprite" parent="." index="0"]

scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -0.592325, -0.21884 )
scale = Vector2( 4.01869, 1.73924 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

position = Vector2( 0.0664825, 0.17643 )
scale = Vector2( 3.97917, 1.80512 )
rect = Rect2( -10, -10, 20, 20 )

[node name="AppearTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = ""
area_mask = 1

[node name="ExplosionTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[node name="FlyingSound" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = ""

[node name="ExplosionSprite" type="Sprite" parent="." index="7"]

visible = false
scale = Vector2( 7, 5 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[connection signal="body_entered" from="." to="." method="_on_Mothership_body_entered"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="timeout" from="AppearTimer" to="." method="_on_AppearTimer_timeout"]

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplsionTimer_timeout"]


